fix(a11n): rounded focus indicator on safari

--- a/express/blocks/template-list/template-list.css
+++ b/express/blocks/template-list/template-list.css
@@ -103,8 +103,10 @@ main .template-list .template {
 }
 
 main .template-list .template:focus {
-  outline: var(--color-info-accent) solid 2px;
-  outline-offset: 2px;
+  outline: none;
+  box-shadow:
+    0 0 0 2px var(--color-white),
+    0 0 0 4px var(--color-info-accent);
 }
 
 
